@@ -1,3 +1,11 @@
+2015-11-04  Ola Jeppsson  <ola@adapteva.com>
+
+	* 64bmode/64bmode.exp: Rename from 64bmode/allinsn.exp. Save
+	and restore global variables.
+	* allinsn.exp: Save and restore global variables.
+	* atomics/atomics.exp: Rename from atomic/allinsn.exp. Save
+	and restore global variables.
+
 2015-10-30  Ola Jeppsson  <ola@adapteva.com>
 
 	* atomics/allinsn.exp: New file.
